[tool.poetry]
name = "mobility"
version = "0.1.0"
description = ""
authors = ["FedericoBotta <federico.botta@wbs.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-mobility = "^1.3.1"
notebook = "^7.2.0"
contextily = "^1.6.0"
pygeos = "^0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
